# vk-app

./: Cargo.toml
src/: app_struct.rs  main.rs
