[package]
name = "vk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = "0.4.20"
nalgebra-glm = "0.18.0"
png = "0.17.10"
pretty_env_logger = "0.5.0"
thiserror = "1.0.48"
tobj = { version = "4.0.0", features = ["log"] }
vulkanalia = {version = "0.21.0", features = ["libloading", "provisional", "window"] }
winit = "0.28.6"
